Fixed issue with touch screens in comments section (on mobile)

--- a/assets/css/minimalmistakes.css
+++ b/assets/css/minimalmistakes.css
@@ -1848,7 +1848,6 @@ a.reversefootnote:hover{
 }
 
 .page__comments {
-  float: left;
   margin-left: 0;
   margin-right: 0;
   width: 100%;
